Beta - add dragging files into notes from avtt file picker, hold shift to apply 'embed site' style instead of direct embed; Fix - issue with loading some avtt file picker files in notes

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -873,7 +873,15 @@ select#doorTypeSelectUVTT{
     top:-100px;
     left:-100px;
 }
-
+.note form .mce-container-body .iframeResizeCover{
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width:100%;
+    height:100%;
+    position: absolute;
+}
 #exitWizard{
     z-index: 50;
     position: fixed;
